Fix inline anchor link display on smaller screens

--- a/public/index.css
+++ b/public/index.css
@@ -109,15 +109,15 @@ h5 {
 }
 
 .heading-wrapper > * {
-	display: inline-block;
+	display: inline;
 	margin-bottom: 0;
 }
 
-.heading-wrapper:not(:first-child) :is(h2, h3) {
+.heading-wrapper:not(:first-child):is(.level-h2, .level-h3) {
 	margin-top: 3rem;
 }
 
-.heading-wrapper:not(:first-child) :is(h4, h5, h6) {
+.heading-wrapper:not(:first-child):is(.level-h4, .level-h5, .level-h6) {
 	margin-top: 2rem;
 }
 
@@ -149,11 +149,11 @@ h5 {
 		bottom: var(--icon-baseline, 0);
 	}
 	
-	.heading-wrapper .anchor-icon.level-h2 {
+	.heading-wrapper.level-h2 .anchor-icon {
 		--icon-baseline: 0.35rem;
 	}
 	
-	.heading-wrapper .anchor-icon.level-h3 {
+	.heading-wrapper.level-h3 .anchor-icon {
 		--icon-baseline: 0.15rem;
 	}
 }
